Header Responsive Clear

--- a/home_apartement.html
+++ b/home_apartement.html
@@ -49,9 +49,9 @@
     </nav>
 
     <section>
-        <div class="mt-58">
-            <div class="container">
-                <div class="row">
+        <div class="mt-10">
+            <div class="container pt-48 pb-48">
+                <div class="row d-flex justify-content-between">
                     <div class="col-lg-6">
                         <div>
                             <h1 class="big-header">
@@ -74,7 +74,7 @@
                                 </p>
                                 <p>
                                     Apartement
-                                </p>    
+                                </p>
                             </div>
                             <div class="fitur">
                                 <p class="text-follow mb-12">
@@ -82,7 +82,7 @@
                                 </p>
                                 <p>
                                     Award's
-                                </p>    
+                                </p>
                             </div>
                             <div class="fitur">
                                 <p class="text-follow mb-12">
@@ -90,9 +90,12 @@
                                 </p>
                                 <p class="">
                                     Happy People
-                                </p>    
+                                </p>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-lg-5 align-self-sm-center text-sm-center">
+                        <img class="img-fluid" src="img/Frame 10 (1).png" alt="">
                     </div>
                 </div>
             </div>
