--- a/home_apartement.html
+++ b/home_apartement.html
@@ -102,6 +102,28 @@
         </div>
     </section>
 
+    <section class="mt-24 text-center">
+        <h1 class="medium-header">
+            Best of The Best
+        </h1>
+        <p class="small-text mt-12">
+            These are the various kinds of apartments <br>
+            that we provide for you with complete amenities
+        </p>
+    </section>
+
+    <section class="container bagian-terakhir">
+        <div class="wrapper-akhir">
+            <div class="contentnya">
+                <img src="img/Frame 20.png" alt="content1">
+                <div class="isi-content">
+                    <h2 class="text-content">
+                        Grand Jakarta ajwodjaowjdoawjdo
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Js Boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
