--- a/home_apartement.html
+++ b/home_apartement.html
@@ -116,9 +116,27 @@
         <div class="wrapper-akhir">
             <div class="contentnya">
                 <img src="img/Frame 20.png" alt="content1">
+                <div class="judul-content">
+                    <h2 class="text-content-sub">
+                        Grand Jakarta
+                    </h2>
+                </div>
                 <div class="isi-content">
-                    <h2 class="text-content">
-                        Grand Jakarta ajwodjaowjdoawjdo
+                    <div class="row">
+                        <div class="isi-content2">
+                            <img src="img/carbon_location.png" alt="location">
+                            <p class="text-content">
+                                Indonesia, Jakarta
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contentnya">
+                <img src="img/Frame 20 (5).png" alt="content2">
+                <div class="judul-content">
+                    <h2 class="text-content-sub">
+                        Nobelnou’s
                     </h2>
                 </div>
             </div>
