--- a/home_apartement.html
+++ b/home_apartement.html
@@ -122,22 +122,80 @@
                     </h2>
                 </div>
                 <div class="isi-content">
-                    <div class="row">
-                        <div class="isi-content2">
-                            <img src="img/carbon_location.png" alt="location">
-                            <p class="text-content">
-                                Indonesia, Jakarta
+                    <div class="isi-content2">
+                        <img src="img/carbon_location.png" alt="location">
+                        <p class="text-content">
+                            Indonesia, Jakartaawoakwodkaowk
+                        </p>
+                        <div>
+                            <p class="text-harga-small">
+                                3.600$
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="contentnya">
-                <img src="img/Frame 20 (5).png" alt="content2">
+                <img src="img/Frame 20.png" alt="content1">
                 <div class="judul-content">
                     <h2 class="text-content-sub">
-                        Nobelnou’s
+                        Grand Jakarta
                     </h2>
+                </div>
+                <div class="isi-content">
+                    <div class="isi-content2">
+                        <img src="img/carbon_location.png" alt="location">
+                        <p class="text-content">
+                            Indonesia, Jakartaawoakwodkaowk
+                        </p>
+                        <div>
+                            <p class="text-harga-small">
+                                3.600$
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contentnya">
+                <img src="img/Frame 20.png" alt="content1">
+                <div class="judul-content">
+                    <h2 class="text-content-sub">
+                        Grand Jakarta
+                    </h2>
+                </div>
+                <div class="isi-content">
+                    <div class="isi-content2">
+                        <img src="img/carbon_location.png" alt="location">
+                        <p class="text-content">
+                            Indonesia, Jakartaawoakwodkaowk
+                        </p>
+                        <div>
+                            <p class="text-harga-small">
+                                3.600$
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contentnya">
+                <img src="img/Frame 20.png" alt="content1">
+                <div class="judul-content">
+                    <h2 class="text-content-sub">
+                        Grand Jakarta
+                    </h2>
+                </div>
+                <div class="isi-content">
+                    <div class="isi-content2">
+                        <img src="img/carbon_location.png" alt="location">
+                        <p class="text-content">
+                            Indonesia, Jakartaawoakwodkaowk
+                        </p>
+                        <div>
+                            <p class="text-harga-small">
+                                3.600$
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
